; ModuleID = '/home/carl/AnghaBench/git/extr_fast-import.c_checkpoint.c'
source_filename = "/home/carl/AnghaBench/git/extr_fast-import.c_checkpoint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@checkpoint_requested = common dso_local global i64 0, align 8
@object_count = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @checkpoint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @checkpoint() #0 {
  store i64 0, i64* @checkpoint_requested, align 8
  %1 = load i64, i64* @object_count, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 (...) @cycle_packfile()
  br label %5

5:                                                ; preds = %3, %0
  %6 = call i32 (...) @dump_branches()
  %7 = call i32 (...) @dump_tags()
  %8 = call i32 (...) @dump_marks()
  ret void
}

declare dso_local i32 @cycle_packfile(...) #1

declare dso_local i32 @dump_branches(...) #1

declare dso_local i32 @dump_tags(...) #1

declare dso_local i32 @dump_marks(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
